@@ -1,3 +1,8 @@
+2004-10-21  Stefan Jahn  <stefan@lkcc.org>
+
+	* matvec.cpp: Fixed compiler (gcc 3.4.2) error in constructor
+	and copy constructor.
+
 2004-10-19  Stefan Jahn  <stefan@lkcc.org>
 
 	* circuit.cpp (transientCapacitance): Fixed compiler warning.
